add_executable(message EXCLUDE_FROM_ALL)
target_sources(message PRIVATE message.cc)
target_include_directories(message PRIVATE ${CMAKE_SOURCE_DIR}/src)
target_link_libraries(message PRIVATE gtest gtest_main u2f-emu-testing ${EXTRA_LIBS})
target_compile_options(message PRIVATE -Wall -Werror -Wextra -pedantic ${EXTRA_FLAGS})
set_target_properties(message PROPERTIES FOLDER tests)
add_test(message message)

add_executable(packet EXCLUDE_FROM_ALL)
target_sources(packet PRIVATE packet.cc)
target_include_directories(packet PRIVATE ${CMAKE_SOURCE_DIR}/src)
target_link_libraries(packet PRIVATE gtest gtest_main u2f-emu-testing ${EXTRA_LIBS})
target_compile_options(packet PRIVATE -Wall -Werror -Wextra -pedantic ${EXTRA_FLAGS})
set_target_properties(packet PROPERTIES FOLDER tests)
add_test(packet packet)

add_executable(usb EXCLUDE_FROM_ALL)
target_sources(usb PRIVATE usb.cc)
target_include_directories(usb PRIVATE ${CMAKE_SOURCE_DIR}/src)
target_link_libraries(usb PRIVATE gtest gtest_main u2f-emu-testing ${EXTRA_LIBS})
target_compile_options(usb PRIVATE -Wall -Werror -Wextra -pedantic ${EXTRA_FLAGS})
set_target_properties(usb PROPERTIES FOLDER tests)
add_test(usb usb)

add_dependencies(check message packet usb)
